--- a/crud_app/views/index.html
+++ b/crud_app/views/index.html
@@ -1,20 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recruiter Information System</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
+
 <body>
-   <header id="header">
-       <nav>
-           <div class ="cotainer">
-              <div class="text-center">
-                  <a href="/" class="nav-brand text-dark">Recruiter Information System</a>
-              </div> 
-           </div>
-       </nav>
-   </header>
+    <header id="header">
+        <nav>
+            <div class="cotainer">
+                <div class="text-center">
+                    <a href="/" class="nav-brand text-dark">Recruiter Information System</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main id="site-main">
+        <div class="container">
+            <div class="box-nav d-flex justify-between">
+                <a href="add/user" class="border-shadow">
+                    <span class="text-gradient">New User<i class="fas fa-user"></i></span>
+                </a>
+            </div>
+
+
+
+            <form action="/" method="POST">
+                <table class="table">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>ID</th>
+                            <th>Recruiter Name</th>
+                            <th>Company</th>
+                            <th>Email</th>
+                            <th>Roles/Domain</th>
+                            <th>Status</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Adam Maiga</td>
+                            <td>Yahoo</td>
+                            <td>adam.maiga@yahoo.com</td>
+                            <td>Technical recruiter</td>
+                            <td>In touch</td>
+                            <td>
+                                <a href="#" class="btn border-shadow update">
+                                    <span class="text-gradient"><i class="fas fa-user-edit"></i></span>
+                                </a>
+                                <a href="#" class="btn border-shadow delete">
+                                    <span class="text-gradient"><i class="fas fa-user-times"></i></span>
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </form>
+        </div>
+    </main>
 </body>
+
 </html>
