--- a/crud_app/views/index.html
+++ b/crud_app/views/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="box-nav d-flex justify-between">
                 <a href="add/user" class="border-shadow">
-                    <span class="text-gradient">New User<i class="fas fa-user"></i></span>
+                    <span class="text-gradient">Add New Recruiter<i class="fas fa-user"></i></span>
                 </a>
             </div>
 
@@ -41,7 +41,7 @@
                             <th>Recruiter Name</th>
                             <th>Company</th>
                             <th>Email</th>
-                            <th>Roles/Domain</th>
+                            <th>Hiring Role</th>
                             <th>Status</th>
                             <th>Action</th>
                         </tr>
