--- a/crud_app/views/index.ejs
+++ b/crud_app/views/index.ejs
@@ -1,11 +1,41 @@
 
 <!--include header-->
-<% - include('include/_header')%>
+<%-include('include/_header')%>
 <!--/include header-->
 
+<main id="site-main">
+    <div class="container">
+        <div class="box-nav d-flex justify-between">
+            <a href="/add_recruiter" class="border-shadow">
+                <span class="text-gradient">Add  New Recruiter<i class="fas fa-user"></i></span>
+            </a>
+        </div>
+
+
+
+        <form action="/" method="POST">
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>ID</th>
+                        <th>Recruiter Name</th>
+                        <th>Company</th>
+                        <th>Email</th>
+                        <th>Hiring Role</th>
+                        <th>Status</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <%-include('include/_show')%>
+                </tbody>
+            </table>
+        </form>
+    </div>
+</main>
 
 
 
 <!--include footer-->
-<% - include('include/_footer')%>
+<%-include('include/_footer')%>
 <!--include footer-->
